All videos added to Bitter Extinction
All videos for Bitter Extinction page has been added. Besides sniper gameplay as needs compressing

--- a/BitterExtinction.html
+++ b/BitterExtinction.html
@@ -148,38 +148,69 @@
 						</details>
 
 						<details class="video-dropdown">
-							<summary>Show Video "Prototype Tesla Tower" ▼</summary>
+							<summary>Show Video "Light Tower" ▼</summary>
 							<video autoplay loop muted playsinline>
-								<source src="videos/BitterExtinction/TeslaPrototype1080.mp4" type="video/mp4">
-							</video>
-						</details>
-						<details class="video-dropdown">
-							<summary>Show Video "Tesla Tower Gameplay" ▼</summary>
-							<video autoplay loop muted playsinline>
-								<source src="videos/BitterExtinction/TeslaTowerFinal1080.mp4" type="video/mp4">
+								<source src="videos/BitterExtinction/LightTowerGameplay1080.mp4" type="video/mp4">
 							</video>
 						</details>
 
 						<details class="video-dropdown">
-							<summary>Show Video "Prototype Flame Tower" ▼</summary>
+							<summary>Show Video "Gatling Tower" ▼</summary>
+							<video autoplay loop muted playsinline>
+								<source src="videos/BitterExtinction/GatlingGun1080.mp4" type="video/mp4">
+							</video>
+						</details>
+
+						<details class="video-dropdown">
+							<summary>Show Video "Tesla Tower" ▼</summary>
+							<video autoplay loop muted playsinline>
+								<source src="videos/BitterExtinction/TeslaTowerFinal1080.mp4" type="video/mp4">
+							</video>
+							<video autoplay loop muted playsinline>
+								<source src="videos/BitterExtinction/TeslaPrototype1080.mp4" type="video/mp4">
+							</video>
+						</details>
+
+						<details class="video-dropdown">
+							<summary>Show Video "Flame Tower" ▼</summary>
+							<video autoplay loop muted playsinline>
+								<source src="videos/BitterExtinction/FlamerGameplay1080.mp4" type="video/mp4">
+							</video>
 							<video autoplay loop muted playsinline>
 								<source src="videos/BitterExtinction/FlamerPrototype1080.mp4" type="video/mp4">
 							</video>
 						</details>
 
 						<details class="video-dropdown">
-							<summary>Show Video "Prototype Artillery Tower" ▼</summary>
+							<summary>Show Video "Artillery Tower" ▼</summary>
+							<video autoplay loop muted playsinline>
+								<source src="videos/BitterExtinction/ArtilleryGameplay1080.mp4" type="video/mp4">
+							</video>
 							<video autoplay loop muted playsinline>
 								<source src="videos/BitterExtinction/Artillery.mp4" type="video/mp4">
 							</video>
 						</details>
 
 						<details class="video-dropdown">
-							<summary>Show Video "Piston Tower Testing" ▼</summary>
+							<summary>Show Video "Piston Tower" ▼</summary>
+							<video autoplay loop muted playsinline>
+								<source src="videos/BitterExtinction/PistonTowerGameplay1080.mp4" type="video/mp4">
+							</video>
 							<video autoplay loop muted playsinline>
 								<source src="videos/BitterExtinction/PistonTower.mp4" type="video/mp4">
 							</video>
 						</details>
+
+						<details class="video-dropdown">
+							<summary>Show Video "Railgun Tower" ▼</summary>
+							<video autoplay loop muted playsinline>
+								<source src="videos/BitterExtinction/RailgunGameplay1080.mp4" type="video/mp4">
+							</video>
+							<video autoplay loop muted playsinline>
+								<source src="videos/BitterExtinction/RailGun.mp4" type="video/mp4">
+							</video>
+						</details>
+
 
 						<details class="text-dropdown">
 							<summary>Show Extra Details ▼</summary>
@@ -196,33 +227,38 @@
 						</p>
 
 						<details class="video-dropdown">
-							<summary>Show Video "EMP Mine Prototyping" ▼</summary>
+							<summary>Show Video "Standard Mine" ▼</summary>
+							<video autoplay loop muted playsinline>
+								<source src="videos/BitterExtinction/StandardMine1080.mp4" type="video/mp4">
+							</video>
+						</details>
+
+						<details class="video-dropdown">
+							<summary>Show Video "EMP Mine" ▼</summary>
+							<video autoplay loop muted playsinline>
+								<source src="videos/BitterExtinction/EmpMineGameplay1080.mp4" type="video/mp4">
+							</video>
 							<video autoplay loop muted playsinline>
 								<source src="videos/BitterExtinction/EMPMine1080.mp4" type="video/mp4">
 							</video>
 						</details>
 
 						<details class="video-dropdown">
-							<summary>Show Video "Tar Trap Prototyping" ▼</summary>
+							<summary>Show Video "Tar Trap" ▼</summary>
 							<video autoplay loop muted playsinline>
 								<source src="videos/BitterExtinction/TarTrapPrototype1080.mp4" type="video/mp4">
 							</video>
 						</details>
 
 						<details class="video-dropdown">
-							<summary>Show Video "Spike Trap V1 Prototyping" ▼</summary>
+							<summary>Show Video "Spike Trap Versions" ▼</summary>
 							<video autoplay loop muted playsinline>
 								<source src="videos/BitterExtinction/SpikeTrapV11080.mp4" type="video/mp4">
 							</video>
-						</details>
-
-						<details class="video-dropdown">
-							<summary>Show Video "Spike Trap V2 Prototyping" ▼</summary>
 							<video autoplay loop muted playsinline>
 								<source src="videos/BitterExtinction/SpikeTrapV21080.mp4" type="video/mp4">
 							</video>
 						</details>
-
 
 						<details class="text-dropdown">
 							<summary>Show Extra Details ▼</summary>
@@ -239,16 +275,57 @@
 						</p>
 
 						<details class="video-dropdown">
-							<summary>Show Video "Tar Gun Prototype" ▼</summary>
+							<summary>Show Video "Revolver" ▼</summary>
+							<video autoplay loop muted playsinline>
+								<source src="videos/BitterExtinction/Revolver1080.mp4" type="video/mp4">
+							</video>
+						</details>
+
+						<details class="video-dropdown">
+							<summary>Show Video "Tar Gun"" ▼</summary>
+							<video autoplay loop muted playsinline>
+								<source src="videos/BitterExtinction/TargunGameplay1080.mp4" type="video/mp4">
+							</video>
 							<video autoplay loop muted playsinline>
 								<source src="videos/BitterExtinction/TarGunPrototype1080.mp4" type="video/mp4">
 							</video>
 						</details>
 
 						<details class="video-dropdown">
-							<summary>Show Video "Sniper Prototype" ▼</summary>
+							<summary>Show Video "Tesla Gun" ▼</summary>
+							<video autoplay loop muted playsinline>
+								<source src="videos/BitterExtinction/TeslaGun1080.mp4" type="video/mp4">
+							</video>
+						</details>
+
+						<details class="video-dropdown">
+							<summary>Show Video "Sniper" ▼</summary>
+							<video autoplay loop muted playsinline>
+								<source src="videos/BitterExtinction/SniperGameplay1080.mp4" type="video/mp4">
+							</video>
 							<video autoplay loop muted playsinline>
 								<source src="videos/BitterExtinction/SniperPrototype1080.mp4" type="video/mp4">
+							</video>
+						</details>
+
+						<details class="video-dropdown">
+							<summary>Show Video "Machine Gun" ▼</summary>
+							<video autoplay loop muted playsinline>
+								<source src="videos/BitterExtinction/MachineGun1080.mp4" type="video/mp4">
+							</video>
+						</details>
+
+						<details class="video-dropdown">
+							<summary>Show Video "Rocket Launcher" ▼</summary>
+							<video autoplay loop muted playsinline>
+								<source src="videos/BitterExtinction/RocketLauncher1080.mp4" type="video/mp4">
+							</video>
+						</details>
+
+						<details class="video-dropdown">
+							<summary>Show Video "Shotgun" ▼</summary>
+							<video autoplay loop muted playsinline>
+								<source src="videos/BitterExtinction/Shotgun1080.mp4" type="video/mp4">
 							</video>
 						</details>
 
@@ -288,9 +365,16 @@
 						</p>
 
 						<details class="video-dropdown">
-							<summary>Show Video "Name" ▼</summary>
+							<summary>Show Video "Grid Visualisation" ▼</summary>
 							<video autoplay loop muted playsinline>
-								<source src="videos/EmptyVideo.mp4" type="video/mp4">
+								<source src="videos/BitterExtinction/GridVisual1080.mp4" type="video/mp4">
+							</video>
+						</details>
+
+						<details class="video-dropdown">
+							<summary>Show Video "Tower Grid Interactions" ▼</summary>
+							<video autoplay loop muted playsinline>
+								<source src="videos/BitterExtinction/TowerInteractions1080.mp4" type="video/mp4">
 							</video>
 						</details>
 
