Removed extra speech mark from Targun video
There was an extra speech mark in targun video title that has been removed

--- a/BitterExtinction.html
+++ b/BitterExtinction.html
@@ -282,7 +282,7 @@
 						</details>
 
 						<details class="video-dropdown">
-							<summary>Show Video "Tar Gun"" ▼</summary>
+							<summary>Show Video "Tar Gun" ▼</summary>
 							<video autoplay loop muted playsinline>
 								<source src="videos/BitterExtinction/TargunGameplay1080.mp4" type="video/mp4">
 							</video>
