--- a/CupCatch.html
+++ b/CupCatch.html
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 							<a href="index.html" class="logo">
-								<span class="symbol"><img src="images/Portrait.png" alt="" /></span><span class="title">Lewis J Mitchell</span>
+								<span class="symbol"><img src="images/Portrait_B&W.png" alt="" /></span><span class="title">Lewis J Mitchell</span>
 							</a>
 
 							<!-- Nav -->
