Most videos added to conjoined
Most of the needed videos added to conjoined page. Just need a few more with some editing touch ups.

--- a/Conjoined.html
+++ b/Conjoined.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Conjoined</title>
+		<title class="title">Conjoined</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -62,6 +62,10 @@
 								frameborder="0" allowfullscreen>
 						</iframe>
 					</div>
+					<a href="https://conjoined.itch.io/by-naughty-spiders" class="download-box" target="_blank" rel="noopener noreferrer">
+						<i class="fas fa-cog"></i>
+						<span>Download: Itch.io</span>
+					</a>
 					<div class="project-container">
 						<div class="left-container">
 							<h2>About</h2>
@@ -96,24 +100,148 @@
 					</div>
 
 					<div class="mainInfo">
-						<h2>System</h2>
-						<p>
-							About System...
-						</p>
-
-						<details class="video-dropdown">
-							<summary>Show Video "Name" ▼</summary>
-							<video autoplay loop muted playsinline>
-								<source src="videos/EmptyVideo.mp4" type="video/mp4">
-							</video>
-						</details>
-
-						<details class="text-dropdown">
-							<summary>Show Extra Details ▼</summary>
+						<div class="mainInfo">
+							<h2>Enemies</h2>
 							<p>
-								Extra Details...
+								About System...
 							</p>
-						</details>
+
+							<details class="video-dropdown">
+								<summary>Show Video "Urchin" ▼</summary>
+								<video autoplay loop muted playsinline>
+									<source src="videos/Conjoined/Urchin1080.mp4" type="video/mp4">
+								</video>
+							</details>
+
+							<details class="video-dropdown">
+								<summary>Show Video "Explosive Urchin" ▼</summary>
+								<video autoplay loop muted playsinline>
+									<source src="videos/Conjoined/ExplosiveUrchin1080.mp4" type="video/mp4">
+								</video>
+							</details>
+
+							<details class="video-dropdown">
+								<summary>Show Video "Wormboy" ▼</summary>
+								<video autoplay loop muted playsinline>
+									<source src="videos/Conjoined/Wormboy1080.mp4" type="video/mp4">
+								</video>
+							</details>
+
+							<details class="video-dropdown">
+								<summary>Show Video "Hattertron" ▼</summary>
+								<video autoplay loop muted playsinline>
+									<source src="videos/Conjoined/Hattertron1080.mp4" type="video/mp4">
+								</video>
+							</details>
+
+							<details class="video-dropdown">
+								<summary>Show Video "Retreat Mechanic" ▼</summary>
+								<video autoplay loop muted playsinline>
+									<source src="videos/Conjoined/RetreatMechanic1080.mp4" type="video/mp4">
+								</video>
+							</details>
+
+							<details class="text-dropdown">
+								<summary>Show Extra Details ▼</summary>
+								<p>
+									Extra Details...
+								</p>
+							</details>
+						</div>
+
+						<div class="mainInfo">
+							<h2>Status Effects</h2>
+							<p>
+								About System...
+							</p>
+
+
+							<details class="video-dropdown">
+								<summary>Show Video "Player Bleed" ▼</summary>
+								<video autoplay loop muted playsinline>
+									<source src="videos/Conjoined/PlayerBleed1080.mp4" type="video/mp4">
+								</video>
+							</details>
+
+
+							<details class="video-dropdown">
+								<summary>Show Video "Player Stun" ▼</summary>
+								<video autoplay loop muted playsinline>
+									<source src="videos/Conjoined/PlayerStun1080.mp4" type="video/mp4">
+								</video>
+							</details>
+
+
+							<details class="video-dropdown">
+								<summary>Show Video "Enemy Stun" ▼</summary>
+								<video autoplay loop muted playsinline>
+									<source src="videos/Conjoined/EnemyStun1080.mp4" type="video/mp4">
+								</video>
+							</details>
+
+							<details class="video-dropdown">
+								<summary>Show Video "Enemy Knockback" ▼</summary>
+								<video autoplay loop muted playsinline>
+									<source src="videos/Conjoined/DevelopingEnemyKnock1080.mp4" type="video/mp4">
+								</video>
+							</details>
+
+							<details class="video-dropdown">
+								<summary>Show Video "Enemy Bleed" ▼</summary>
+								<video autoplay loop muted playsinline>
+									<source src="videos/Conjoined/EnemyBleed1080.mp4" type="video/mp4">
+								</video>
+							</details>
+
+							<details class="text-dropdown">
+								<summary>Show Extra Details ▼</summary>
+								<p>
+									Extra Details...
+								</p>
+							</details>
+						</div>
+
+						<div class="mainInfo">
+							<h2>Respawn System</h2>
+							<p>
+								About System...
+							</p>
+
+							<details class="video-dropdown">
+								<summary>Show Video "Respawn Point" ▼</summary>
+								<video autoplay loop muted playsinline>
+									<source src="videos/Conjoined/UrchinStreetRespawn1080.mp4" type="video/mp4">
+								</video>
+							</details>
+
+							<details class="text-dropdown">
+								<summary>Show Extra Details ▼</summary>
+								<p>
+									Extra Details...
+								</p>
+							</details>
+						</div>
+
+						<div class="mainInfo">
+							<h2>Location Name System</h2>
+							<p>
+								About System...
+							</p>
+
+							<details class="video-dropdown">
+								<summary>Show Video "Location Display" ▼</summary>
+								<video autoplay loop muted playsinline>
+									<source src="videos/Conjoined/LocationSystem1080.mp4" type="video/mp4">
+								</video>
+							</details>
+
+							<details class="text-dropdown">
+								<summary>Show Extra Details ▼</summary>
+								<p>
+									Extra Details...
+								</p>
+							</details>
+						</div>
 					</div>
 				</div>
 			</div>
