Added about summary of Conjoined
About summary added for the conjoined page of projects

--- a/Conjoined.html
+++ b/Conjoined.html
@@ -69,7 +69,13 @@
 					<div class="project-container">
 						<div class="left-container">
 							<h2>About</h2>
-							<p>Bitter Extinction began as a second-year university project and was submitted for the Games Academy Expo 2022. The project provided valuable experience in game design and teamwork, showcasing our ability to create a functional prototype within a limited timeframe. The game was well-received by attendees at the expo, who enjoyed its unique concept and gameplay. </p>
+							<p>
+								Conjoined was developed as a first year university project and showcased at the Games Academy Expo 2021.
+								This 3D combat adventure game features conjoined twins, Jonnie and Connie, navigating through 
+								puzzles and battling enemies to confront the antagonist, Odious Keith. This project also had a spot at 
+								the Falmouth University booth during EGX London 2024, where it was presented on an arcade machine alongside 
+								other standout student projects from previous years.
+							</p>
 						</div>
 						<div class="right-container">
 							<h2>Project Info</h2>
