--- a/AboutMe.html
+++ b/AboutMe.html
@@ -60,71 +60,47 @@
 					<div class="mainInfo">
 						<h2> Introduction </h2>
 						<p>
-							Some Info...
+							I am a passionate Game Developer with hands on experience in C# and C++, specializing in creating engaging gameplay systems and user experiences within Unity and 
+							Unreal Engine. With a background in computer games development and a strong grasp of both front-end and back-end design, I bring creativity, technical proficiency, and collaborative 
+							energy to any project I take on.
 						</p>
-
-						<details class="text-dropdown">
-							<summary>Show Extra Details ▼</summary>
-							<p>
-								More about this section...
-							</p>
-						</details>
 					</div>
 
 					<div class="mainInfo">
 						<h2> Skills </h2>
-						<p>
-							Some Info...
-						</p>
-
-						<details class="text-dropdown">
-							<summary>Show Extra Details ▼</summary>
-							<p>
-								More about this section...
-							</p>
-						</details>
+						<h3>Languages</h3>
+							C#<br />
+							C++<br />
+						<h3>Engines</h3>
+							Unity<br />
+							Unreal Engine<br />
+						<h3>Tools</h3>
+							Git, GitHub, BitBucket, Tortoise Git, Git Bash<br />
+							Trello<br />
+							GIMP<br />
+							Blender<br />
 					</div>
 
 					<div class="mainInfo">
 						<h2> Experience </h2>
-						<p>
-							Some Info...
-						</p>
-
-						<details class="text-dropdown">
-							<summary>Show Extra Details ▼</summary>
-							<p>
-								More about this section...
-							</p>
-						</details>
 					</div>
 
 					<div class="mainInfo">
 						<h2> Education </h2>
 						<p>
-							Some Info...
+							BSc (Hons) in Computing for Games<br />
+							Falmouth University<br />
+							[September 2020 – June 2023] <br />
+							Specialised in gameplay programming, design principles, and cross-discipline collaboration.<br />
+							Developed portfolio-ready projects<br />
+							Gained comprehensive knowledge of technical and creative aspects of game development.<br />
 						</p>
-
-						<details class="text-dropdown">
-							<summary>Show Extra Details ▼</summary>
-							<p>
-								More about this section...
-							</p>
-						</details>
 					</div>
 
 					<div class="mainInfo">
 						<h2> Bonus </h2>
-						<p>
-							Some Info...
-						</p>
-
-						<details class="text-dropdown">
-							<summary>Show Extra Details ▼</summary>
-							<p>
-								More about this section...
-							</p>
-						</details>
+						Favourite Games: Borderlands, The Finals, WH40k Darktide, Vermintide 2 & Sunset Overdrive <br/>
+						Top Indie Games: Astroneer, Gunfire Reborn, Golf with your Friends, Stardew Valley & Puzzle Compound
 					</div>
 				</div>
 			</div>
