About me page finished
Added all information to about me page. CSS added for the about me page with sectionBoxes and subBoxes

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -56,51 +56,98 @@
 			<div id="main">
 				<div class="inner">
 					<h1>About Me</h1>
+					<div class="sectionBox">
+						<h2> How I Got Here </h2>
+						<div class="subBox">
+							<p>
+								<h3>Introductiuon</h3>
+								I am a passionate Game Developer with hands-on experience in C# and C++, specialising in creating engaging gameplay systems and user experiences within Unity and Unreal Engine.<br />
+								With a background in computer games development and a strong grasp of both front-end and back-end design, I bring creativity, technical proficiency, and collaborative energy to every project I take on.<br /><br />
+							</p>
+						</div>
+						<div class="subBox">
+							<p>
+								<h3>Development Journey</h3>
+								My journey into game development started early, when I first explored the basics of programming at school using Scratch.<br />
+								Later in secondary school, I was introduced to my first real programming language: Python.<br /><br />
 
-					<div class="mainInfo">
-						<h2> Introduction </h2>
-						<p>
-							I am a passionate Game Developer with hands on experience in C# and C++, specializing in creating engaging gameplay systems and user experiences within Unity and 
-							Unreal Engine. With a background in computer games development and a strong grasp of both front-end and back-end design, I bring creativity, technical proficiency, and collaborative 
-							energy to any project I take on.
-						</p>
+								After school, I pursued a BTEC in college where I was introduced to C# and Unity and gained a strong foundation in computer science.<br />
+								I studied subjects such as computer hardware, basic networking, web development, Java, assembly, and Excel.<br /><br />
+
+								I then went on to university to specialise in game programming.<br />
+								There, I had the opportunity to work in collaborative teams on multiple projects and met some amazing people who helped shape my development journey.<br />
+								I deepened my knowledge of C# and Unity, explored Unreal Engine 5 and C++, and even built my own game controller using Arduino, which gave me hands-on hardware experience.<br /><br />
+
+								Outside of academia, I’ve worked on personal projects and participated in game jams to continue sharpening my skills.<br />
+								These experiences have strengthened my understanding of tools like Unity, Unreal, C#, and C++, and allowed me to grow as both a developer and a problem-solver.<br />
+								Lately, I’ve also been exploring disciplines like 3D art to gain a better understanding of the full development pipeline and how each role contributes to building compelling games.
+							</p>
+						</div>
+					</div>
+					<div class="flexRow">
+						<div class="sectionBox">
+							<h2> Education </h2>
+							<div class="subBox">
+								<p>
+									<h3>Falmouth University</h3>
+									BSc (Hons) in Computing for Games<br />
+									September 2020 – June 2023 <br />
+									Grade: Second Class Honours (Upper Division) <br />
+								</p>
+							</div>
+							<div class="subBox">
+								<p>
+									<h3>Truro College</h3>
+									BTech Computer Science <br />
+									September 2018 – August 2020 <br />
+									Grade: Triple Grade Distinction <br />
+								</p>
+							</div>
+						</div>
+
+						<div class="sectionBox">
+							<h2> Skills </h2>
+							<div class="subBox">
+								<h3>Languages</h3>
+								C#<br />
+								C++<br />
+								Python<br />
+							</div>
+							<div class="subBox">
+								<h3>Engines</h3>
+								Unity<br />
+								Unreal Engine<br />
+							</div>
+							<div class="subBox">
+								<h3>Tools</h3>
+								Git<br />
+								Trello<br />
+								GIMP<br />
+								Blender<br />
+							</div>
+						</div>
 					</div>
 
-					<div class="mainInfo">
-						<h2> Skills </h2>
-						<h3>Languages</h3>
-							C#<br />
-							C++<br />
-						<h3>Engines</h3>
-							Unity<br />
-							Unreal Engine<br />
-						<h3>Tools</h3>
-							Git, GitHub, BitBucket, Tortoise Git, Git Bash<br />
-							Trello<br />
-							GIMP<br />
-							Blender<br />
-					</div>
-
-					<div class="mainInfo">
-						<h2> Experience </h2>
-					</div>
-
-					<div class="mainInfo">
-						<h2> Education </h2>
-						<p>
-							BSc (Hons) in Computing for Games<br />
-							Falmouth University<br />
-							[September 2020 – June 2023] <br />
-							Specialised in gameplay programming, design principles, and cross-discipline collaboration.<br />
-							Developed portfolio-ready projects<br />
-							Gained comprehensive knowledge of technical and creative aspects of game development.<br />
-						</p>
-					</div>
-
-					<div class="mainInfo">
+					<div class="sectionBox">
 						<h2> Bonus </h2>
-						Favourite Games: Borderlands, The Finals, WH40k Darktide, Vermintide 2 & Sunset Overdrive <br/>
-						Top Indie Games: Astroneer, Gunfire Reborn, Golf with your Friends, Stardew Valley & Puzzle Compound
+						<div class="subBox">
+							<h3>Favourite Games</h3>
+							Borderlands <br />
+							The Finals <br />
+							WH40K Darktide <br />
+						</div>
+						<div class="subBox">
+							<h3>Favourite Genres</h3>
+							Looter Shooter <br />
+							Co-op <br />
+							Sci-Fi RPG <br />
+						</div>
+						<div class="subBox">
+							<h3>Development Interests</h3>
+							Combat Systems <br />
+							Procedural Generation <br />
+							Gameplay Progression Systems <br />
+						</div>
 					</div>
 				</div>
 			</div>
