Adjusted the Programming Projects Button Info

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 							<a href="ProgrammingProjects.html">
 								<h2>Programming Projects</h2>
 								<div class="content">
-									<p>Explore my coding portfolio, featuring games, applications, and technical experiments</p>
+									<p>Explore my coding portfolio, featuring the projects that I've been involved in</p>
 								</div>
 							</a>
 						</article>
