Added extra break in About me

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -140,7 +140,8 @@
 							<h3>Favourite Genres</h3>
 							Looter Shooter <br />
 							Co-op <br />
-							Sci-Fi RPG <br />
+							Sci-Fi <br />
+							RPG <br />
 						</div>
 						<div class="subBox">
 							<h3>Development Interests</h3>
